# lafrpc

./: .gitignore  .gitmodules  README.md  wc.py
cpp/: CMakeLists.txt  laf_rpc.h  lafrpc.h  lafrpc.pri  lafrpc.pro  qtnetworkng
cpp/examples/hello/: CMakeLists.txt  client.cpp  server.cpp
cpp/include/: base.h  peer.h  rpc.h  rpc_p.h  senddir.h  sendfile.h  serialization.h  serialization_p.h  tran_crypto.h  transport.h  utils.h
cpp/src/: base.cpp  crypto.cpp  peer.cpp  rpc.cpp  senddir.cpp  sendfile.cpp  serialization.cpp  tran_crypto.cpp  transport.cpp
cpp/tests/: sendfile.cpp  simple_test.cpp
python/: requirements.txt
python/examples/: __init__.py  hello.py  sendfile.py  test_cert.pem  test_key.pem
python/examples/makekey/: CMakeLists.txt  main.cpp
python/lafrpc/: __init__.py  base.py  deferred.py  network.py  peer.py  rpc.py  senddir.py  sendfile.py  utils.py
python/lafrpc/scheduler/: __init__.py  base.py  eventlet.py  gevent.py  queue.py  thread.py
python/lafrpc/serialization/: __init__.py  base.py  json.py  msgpack.py  qt.py
python/lafrpc/transport/: __init__.py  base.py  ssl.py  tcp.py
