CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0 FATAL_ERROR)

PROJECT(pbook)

SET(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Qt5Core REQUIRED)

ADD_SUBDIRECTORY(../.. lafrpc)

ADD_EXECUTABLE(server server.cpp)
ADD_EXECUTABLE(client client.cpp)

TARGET_LINK_LIBRARIES(server Qt5::Core lafrpc)
TARGET_LINK_LIBRARIES(client Qt5::Core lafrpc)
